[gd_scene load_steps=6 format=2]

[ext_resource path="res://dataFile/powerups/powerupRed_shield.png" type="Texture" id=1]
[ext_resource path="res://dataCode/PowerUp.gd" type="Script" id=2]
[ext_resource path="res://dataFile/xfx/power_up.wav" type="AudioStream" id=3]
[ext_resource path="res://dataCode/AudioEffectPowerUp.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="LifePowerUp" type="RigidBody2D" groups=[
"PowerUp",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.49133, 1.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.8909, -1.33635 )
scale = Vector2( 2.17081, 2.33055 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
script = ExtResource( 4 )
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="finished" from="AudioEffect" to="." method="_on_AudioEffect_finished"]
